crates/test-files/fixtures/compile_errors/invalid_type_in_event_zero_sized.fe
contract EmptyContract {
}

struct EmptyStruct {
}

event Event {
    idx x: ()
    idx y: EmptyStruct
    idx z: EmptyContract
    v: ()
}
